# simple-asr-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.ru.md  pyproject.toml
src/simple_asr_mcp/: server.py
tests/: test_server.py
