[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-asr-mcp"
version = "0.1.0"
description = "Minimal MCP server for local speech recognition using faster-whisper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "selentar" },
]
keywords = ["mcp", "asr", "whisper", "speech-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "faster-whisper>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Selentar/simple-asr-mcp"
Repository = "https://github.com/Selentar/simple-asr-mcp"
Issues = "https://github.com/Selentar/simple-asr-mcp/issues"

[project.scripts]
simple-asr-mcp = "simple_asr_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
